Renamed package from AutoPOC to MyridiusUAF and moved corresponding files